[package]
name = "hb"
version = "0.0.13"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "HTTP Benchmark Tool"
homepage = "https://github.com/sile/hb"
repository = "https://github.com/sile/hb"
readme = "README.md"
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/hb"}
codecov = {repository = "sile/hb"}

[dependencies]
clap = "2"
fibers = "0.1"
fibers_http_client = "0.1"
futures = "0.1"
httpcodec = "0.2"
serde = { version = "1", features = ["derive"] }
serdeconv = "0.3"
slog = "2"
sloggers = "0.3"
trackable = { version = "0.2", features = ["serialize"] }
url = "1"
url_serde = "0.2"